# chaos-game

./: .gitignore  README.md
lib/: pyproject.toml
lib/src/chaos_game_base/: chaos.py
